--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </font><br><br>
     
      <p>Crea un enlace a
-        <a href="https://www.mozilla.org/es-ES/">PDF</a>.
+        <a href="\PDF\Prueba.pdf">PDF</a>.
      </p>
     
     <nav>
