--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="\css\estilos.css">
+    <link rel="stylesheet" href="css\estilos.css">
     <title>PáginaWeb</title>
 </head>
 
@@ -26,7 +26,7 @@
     </font><br><br>
     
      <p>Crea un enlace a
-        <a href="\PDF\Prueba.pdf">PDF</a>.
+        <a href="PDF\Prueba.pdf">PDF</a>.
      </p>
     
     <nav>
