--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <ol>
 
-            <li><a href="/urldelapagina">Inicio</a></li>
-
+            <li><a href="https://diegoavar.github.io/">Inicio</a></li>
+        
             <li><a href="/ urldelapagina ">Pagina 1</a></li>
 
             <li><a href="/ urldelapagina ">Pagina 2</a></li>
