--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <font size="6" color="#df7644" face="Tahoma">
 
-        Menú en formato texto
+        Menú (beta)
 
     </font><br><br>
     
