--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
             <li><a href="https://diegoavar.github.io/">Inicio</a></li>
         
-            <li><a href="/ urldelapagina ">Pagina 1</a></li>
+            <li><a href="/ urldelapagina ">Tema 1</a></li>
 
-            <li><a href="/ urldelapagina ">Pagina 2</a></li>
+            <li><a href="/ urldelapagina ">Tema 2</a></li>
 
-            <li><a href="/ urldelapagina ">Pagina 3</a></li>
+            <li><a href="/ urldelapagina ">Tema 3</a></li>
 
         </ol>
 
