--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
 
     </font><br><br>
     
-     <p>Crea un enlace a
+     <p>DEV TOOLS:
         <a href="PDF\Devtools.pdf">PDF</a>.
      </p>
+    <p>
+        Trabajo Componentes Web:
+        <a href="PDF\Componentes.pdf">ComposWeb
+    </p>
+        <p>
+        Trabajo Colores Web:
+        <a href="PDF\Colores.pdf">ComposWeb
+    </p>
+            <p>
+        Trabajo NuevosColores Web:
+        <a href="PDF\Nuevos.pdf">ComposWeb
+    </p>
     
     <nav>
 
