--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
             <p>
         Trabajo NuevosColores Web:
-        <a href="PDF\Nuevos.pdf">ComposWeb
+        <a href="PDF\Nuevos.png">ComposWeb
     </p>
     
     <nav>
