--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
      </p>
     <p>
         Trabajo Componentes Web:
-        <a href="PDF\Componentes.pdf">ComposWeb
+        <a href="PDF\Componentes.pdf">ComposWeb</a>
     </p>
         <p>
         Trabajo Colores Web:
-        <a href="PDF\Colores.pdf">ComposWeb
+        <a href="PDF\Colores.pdf">COLORES</a>
     </p>
             <p>
         Trabajo NuevosColores Web:
-        <a href="PDF\Nuevos.png">ComposWeb
+                <a href="PDF\Nuevos.png">NUEVOS COLORES</a>
     </p>
     
     <nav>
