--- a/index.html
+++ b/index.html
@@ -32,14 +32,7 @@
         Trabajo Componentes Web:
         <a href="PDF\Componentes.pdf">ComposWeb</a>
     </p>
-        <p>
-        Trabajo Colores Web:
-        <a href="PDF\Colores.pdf">COLORES</a>
-    </p>
-            <p>
-        Trabajo NuevosColores Web:
-                <a href="PDF\Nuevos.png">NUEVOS COLORES</a>
-    </p>
+   
     
     <nav>
 
@@ -47,7 +40,7 @@
 
             <li><a href="https://diegoavar.github.io/">Inicio</a></li>
         
-            <li><a href="/ urldelapagina ">Tema 1</a></li>
+            <li><a href="TEMAS\Tema1\TEMA1.html">Tema 1</a></li>
 
             <li><a href="/ urldelapagina ">Tema 2</a></li>
 
