--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <li><a href="https://diegoavar.github.io/">Inicio</a></li>
         
-            <li><a href="TEMAS\Tema1\TEMA1.html">Tema 1 - Colores</a></li>
+            <li><a href="TEMAS\Tema1\tema1.html">Tema 1 - Colores</a></li>
 
             <li><a href="/ urldelapagina ">Tema 2</a></li>
 
