--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body >
 
 
-    <header style="color: aqua">
+    <header style="color:  #FFE3DD">
+     <br> 
 <h1>DINT DOCUMENTACION</h1>
         <img >
 
@@ -40,7 +41,7 @@
 
             <li><a href="https://diegoavar.github.io/">Inicio</a></li>
         
-            <li><a href="TEMAS\Tema1\tema1.html">Tema 1 - Colores</a></li>
+            <li><a href="TEMAS\Tema1\TEMA1.html">Tema 1</a></li>
 
             <li><a href="/ urldelapagina ">Tema 2</a></li>
 
