--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <li><a href="https://diegoavar.github.io/">Inicio</a></li>
         
-            <li><a href="TEMAS\Tema1\TEMA1.html">Tema 1</a></li>
+            <li><a href="temas\Tema1\TEMA1.html">Tema 1</a></li>
 
             <li><a href="/ urldelapagina ">Tema 2</a></li>
 
