--- a/temas/Tema1/TEMA1.html
+++ b/temas/Tema1/TEMA1.html
@@ -2,31 +2,49 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="..\..\css\estilos.css">
+    <link rel="stylesheet" href="..\..\css\estilosss.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>PáginaWeb</title>
+
 </head>
 
 <body>
 
-    <header style="color:  #FFE3DD">
-        <br>
-        <h1>DINT - Planificación Interfaces Gráficas - T1.Colores</h1>
-        <img>
 
+    <header id="main-header">
+        <!--       aun no hay ruta      -->
+        <a id="logo-header" href="https://diegoavar.github.io/">
+            <span class="site-name">DINT Documentación</span>
+            <span class="site-desc"> Diego Ávila Arroyo </span>
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="https://diegoavar.github.io/">Inicio</a></li>
+                <li><a href="..\..\Temas.html">Temas</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
 
     </header>
 
-    <font size="6" color="#df7644" face="Tahoma">
+ 
+    <section id="main-content">
+        <article>
+            <div class="content">
+                <header>
+                    <h1>TEMA 1</h1>
+                </header>
 
-            <a href="https://diegoavar.github.io/" class="select" > &nbsp Inicio  &nbsp</a> &nbsp <a href="trabajos.html" class="navegador"> &nbsp Trabajos  &nbsp</a> &nbsp <a href="Herramientas.html" class="navegador"> &nbsp Herramientas  &nbsp</a>
+<a href="https://diegoavar.github.io/" class="select"> &nbsp Inicio &nbsp</a> &nbsp <a href="trabajos.html"
+            class="navegador"> &nbsp Trabajos &nbsp</a> &nbsp <a href="Herramientas.html" class="navegador"> &nbsp
+            Herramientas &nbsp</a>
 
-    </font><br><br>
-
-
-   
+            </div>
+        </article>
+    </section>
 
 </body>
 
