--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -50,7 +50,10 @@
         </div>
         </article>
         </section>
-
+    
+ <footer id="main-footer">
+        <p>&copy; 2022 diegoavar@educa.jcyl.es</a></p>
+    </footer> <!-- Final del footer -->
              
 </body>
 </html>
