--- a/Temas.html
+++ b/Temas.html
@@ -36,7 +36,7 @@
                     </header>
     <ol>
     
-        <li><a href="TEMAS\Tema1\TEMA1.html">Tema 1 - Colores</a></li>
+        <li><a href="temas\Tema1\TEMA1.html">Tema 1 - Colores</a></li>
 
         <li><a href="/ urldelapagina ">Tema 2</a></li>
 
