--- a/temas/Tema1/Herramientas.html
+++ b/temas/Tema1/Herramientas.html
@@ -17,7 +17,7 @@
         
                 <nav>
                     <ul>
-                        <li><a href="">Inicio</a></li>
+                        <li><a href="https://diegoavar.github.io/">Inicio</a></li>
                         <li><a href="..\..\Temas.html">Temas</a></li>
                         <li><a href="#">Contacto</a></li>
                     </ul>
