--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <header id="main-header">
         <!--       aun no hay ruta      -->
         <a id="logo-header" href="">
-            <span class="site-name">DINT Documentación</span>
-            <span class="site-desc"> Diego Ávila Arroyo </span>
+               
+            <span class="site-name"><img src="icono.png" width="40" height="40" style="float: left"  > &nbsp; DINT Documentación   </span>
+           <span class="site-desc"> &nbsp; &nbsp; Diego Ávila Arroyo </span>
+        
         </a>
 
         <nav>
