--- a/temas/Tema1/TEMA1.html
+++ b/temas/Tema1/TEMA1.html
@@ -60,9 +60,9 @@
     
             <nav id="trabajo-nav">
                 <ul>
-                    <li><a href="https://diegoavar.github.io/" class="selected">Inicio</a></li>
-                    <li><a href="Temas.html">Trabajos</a></li>
-                    <li><a href="https://diegoavar.github.io/">Herramientas</a></li>
+                     <li><a href="TEMA1.html" class="selected">Inicio</a></li>
+                    <li><a href="trabajos.htm.html">Trabajos</a></li>
+                    <li><a href="Herramientas.html" >Herramientas</a></li>
                 </ul>
             </nav>
     
