--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -58,9 +58,9 @@
     
             <nav id="trabajo-nav">
                 <ul>
-                    <li><a href="https://diegoavar.github.io/">Inicio</a></li>
-                    <li><a href="Temas.html"  class="selected">Trabajos</a></li>
-                    <li><a href="https://diegoavar.github.io/">Herramientas</a></li>
+                     <li><a href="TEMA1.html" >Inicio</a></li>
+                    <li><a href="trabajos.htm.html" class="selected">Trabajos</a></li>
+                    <li><a href="Herramientas.html" >Herramientas</a></li>
                 </ul>
             </nav>
     
