--- a/temas/Tema1/TEMA1.html
+++ b/temas/Tema1/TEMA1.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PáginaWeb</title>  
+       <title>DINT Tema1</title>
+    <link rel="icon" href="iconoweb.png" type="image" > 
     
     
        <!-- SCRIPT MEDIO PARA LINKS/BOTONES-->
