--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DINT T1.Trabajos</title>
+    <link rel="icon" href="iconoweb.png" type="image" >
     <link rel="stylesheet" href="..\..\css\estilosss.css">
         <!-- SCRIPT MEDIO PARA LINKS/BOTONES-->
     <script src=
