--- a/temas/Tema1/Herramientas.html
+++ b/temas/Tema1/Herramientas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>DINT T1.Herramientas</title>
-    <link rel="icon" href="iconoweb.png" type="image" >
+    <link rel="icon" href="..\..\iconoweb.png" type="image" >
     <link rel="stylesheet" href="..\..\css\estilosss.css">
     
        <!-- SCRIPT MEDIO PARA LINKS/BOTONES-->
@@ -56,7 +56,7 @@
             <nav id="trabajo-nav">
                 <ul>
                     <li><a href="TEMA1.html" >Inicio</a></li>
-                    <li><a href="trabajos.htm.html">Trabajos</a></li>
+                    <li><a href="trabajos.html">Trabajos</a></li>
                     <li><a href="Herramientas.html" class="selected">Herramientas</a></li>
                 </ul>
             </nav>
