--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DINT T1.Trabajos</title>
-    <link rel="icon" href="iconoweb.png" type="image" >
+    <link rel="icon" href="..\..\iconoweb.png" type="image" >
     <link rel="stylesheet" href="..\..\css\estilosss.css">
         <!-- SCRIPT MEDIO PARA LINKS/BOTONES-->
     <script src=
@@ -60,7 +60,7 @@
             <nav id="trabajo-nav">
                 <ul>
                      <li><a href="TEMA1.html" >Inicio</a></li>
-                    <li><a href="trabajos.htm.html" class="selected">Trabajos</a></li>
+                    <li><a href="trabajos.html" class="selected">Trabajos</a></li>
                     <li><a href="Herramientas.html" >Herramientas</a></li>
                 </ul>
             </nav>
@@ -76,8 +76,7 @@
 
            <div class="content">
 
-                    <a href="TEMA1.html" class="navegador" >  &nbsp Inicio  &nbsp</a> &nbsp <a href="trabajos.html" class="select">  &nbsp Trabajos  &nbsp</a> &nbsp <a href="Herramientas.html" class="navegador"> &nbsp Herramientas  &nbsp</a>
-            
+                   
 <br>
 <br>
         <p>
