--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -87,6 +87,10 @@
                 Trabajo NuevosColores Web:
                 <a href="..\..\PDF\Nuevos.png">NuevosColores.png</a>
             </p>
+                 <p>
+Componentes Balsamiq:
+                <a href="..\..\PDF\Mis componentes.pdf">Balsamiq.pdf</a>
+            </p>
         </div>
         </article>
         </section>
