--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -91,6 +91,12 @@
 Componentes Balsamiq:
                 <a href="..\..\PDF\Mis componentes.pdf">Balsamiq.pdf</a>
             </p>
+                <p>
+                Trabajo Iconos:
+                <a href="dint\iconos.html">Iconos HTML</a>
+            </p>
+               
+               
         </div>
         </article>
         </section>
