--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -92,7 +92,7 @@ Componentes Balsamiq:
                 <a href="..\..\PDF\Mis componentes.pdf">Balsamiq.pdf</a>
             </p>
                 <p>
-                Trabajo Iconos:
+                Trabajo Iconos MaterialDesigner:
                 <a href="dint\iconos.html">Iconos HTML</a>
             </p>
                
