--- a/temas/Tema1/dint/iconos.html
+++ b/temas/Tema1/dint/iconos.html
@@ -63,9 +63,9 @@
     
             <nav id="trabajo-nav">
                 <ul>
-                     <li><a href="TEMA1.html" class="selected">Inicio</a></li>
-                    <li><a href="trabajos.html">Trabajos</a></li>
-                    <li><a href="Herramientas.html" >Herramientas</a></li>
+                     <li><a href="..\TEMA1.html" class="selected">Inicio</a></li>
+                    <li><a href="..\trabajos.html">Trabajos</a></li>
+                    <li><a href="..\Herramientas.html" >Herramientas</a></li>
                 </ul>
             </nav>
     
