--- a/temas/Tema1/trabajos.html
+++ b/temas/Tema1/trabajos.html
@@ -95,7 +95,10 @@ Componentes Balsamiq:
                 Trabajo Iconos MaterialDesigner:
                 <a href="dint\iconos.html">Iconos HTML</a>
             </p>
-               
+                        <p>
+Trabajo Figma 3 Páginas (boostrap,M3,propia):
+                <a href="BoostrapMaterial3Paginas.fig">TrabajoFigma3Paginas</a>
+            </p>
                
         </div>
         </article>
